Modernize collection factory methods in metadata builder
Agent-Logs-Url: https://github.com/hazendaz/beanprovider/sessions/9fab70de-d564-4731-86f5-eeed6676f032

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>